feat: fix pathes

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
           <img src="./examples/assets/picture.jpg" />
         </section>
 
-        <section data-background-image="../examples/assets/background.png">
+        <section data-background-image="./examples/assets/background.png">
           <h1>Regular Expressions in JavaScript</h1>
           <p>Supercharge your string manipulation skills!</p>
         </section>
 
-        <section data-background-image="../examples/assets/background.png">
+        <section data-background-image="./examples/assets/background.png">
           <h2>What is a Regular Expression?</h2>
           <p>
             A sequence of characters that form a search pattern, used for string
@@ -37,7 +37,7 @@
           </code></pre>
         </section>
 
-        <section data-background-image="../examples/assets/background.png">
+        <section data-background-image="./examples/assets/background.png">
           <h2>Creating a RegEx</h2>
           <pre><code data-trim data-noescape>
             // Literal notation
@@ -48,7 +48,7 @@
           </code></pre>
         </section>
 
-        <section data-background-image="../examples/assets/background.png">
+        <section data-background-image="./examples/assets/background.png">
           <h2>RegEx Flags</h2>
           <ul>
             <li><code>g</code> – global search</li>
@@ -60,7 +60,7 @@
           </code></pre>
         </section>
 
-        <section data-background-image="../examples/assets/background.png">
+        <section data-background-image="./examples/assets/background.png">
           <h2>Common Patterns</h2>
           <ul>
             <li><code>.</code> – Any character</li>
@@ -75,7 +75,7 @@
           </ul>
         </section>
 
-        <section data-background-image="../examples/assets/background.png">
+        <section data-background-image="./examples/assets/background.png">
           <h2>Testing Patterns</h2>
           <pre><code data-trim data-noescape>
             const str = "Hello world!";
@@ -84,7 +84,7 @@
           </code></pre>
         </section>
 
-        <section data-background-image="../examples/assets/background.png">
+        <section data-background-image="./examples/assets/background.png">
           <h2>Extracting Matches</h2>
           <pre><code data-trim data-noescape>
             const str = "Email me at hello@example.com";
@@ -93,7 +93,7 @@
           </code></pre>
         </section>
 
-        <section data-background-image="../examples/assets/background.png">
+        <section data-background-image="./examples/assets/background.png">
           <h2>Replacing Text</h2>
           <pre><code data-trim data-noescape>
             const str = "I like cats";
@@ -102,7 +102,7 @@
           </code></pre>
         </section>
 
-        <section data-background-image="../examples/assets/background.png">
+        <section data-background-image="./examples/assets/background.png">
           <h2>Advanced Example</h2>
           <pre><code data-trim data-noescape>
             const url = "https://example.com/page/123";
@@ -112,7 +112,7 @@
           </code></pre>
         </section>
 
-        <section data-background-image="../examples/assets/background.png">
+        <section data-background-image="./examples/assets/background.png">
           <h2>Real-World Use Cases</h2>
           <ul>
             <li>Form validation (email, phone, etc.)</li>
@@ -122,7 +122,7 @@
           </ul>
         </section>
 
-        <section data-background-image="../examples/assets/background.png">
+        <section data-background-image="./examples/assets/background.png">
           <h2>Helpful Tools</h2>
           <ul>
             <li>
@@ -141,7 +141,7 @@
           </ul>
         </section>
 
-        <section data-background-image="../examples/assets/background.png">
+        <section data-background-image="./examples/assets/background.png">
           <h2>Conclusion</h2>
           <p>
             Practice regularly, keep patterns simple, and use online tools to
