--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="reveal">
       <div class="slides">
-        <section data-background-image="../examples/assets/background.png">
+        <section data-background-image="./examples/assets/background.png">
           <img src="./examples/assets/picture.jpg" />
         </section>
 
